# mtg-random-creature-printer-esp32s3

./: .gitignore  LICENSE  README.md  README_zh-CN.md
docs/: build_and_flash.md  build_and_flash_zh-CN.md  sd_card_format.md  sd_card_format_zh-CN.md  wiring.md  wiring_zh-CN.md
firmware/esp32s3_magic_printer/main/: CMakeLists.txt  bsp_oled_codetab.h  card_db.c  card_db.h  encoder.c  encoder.h  main.c  sd_card_reader.c  sd_card_reader.h  ssd1306.c  ssd1306.h  thermal_printer.c  thermal_printer.h
tools/card_data_builder/: README.md  README_zh-CN.md  card_data_builder.py
